// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`step > getMergedStep > should allow step props to override stepOptions 1`] = `
{
  "content": "Test content",
  "disableBeacon": false,
  "disableCloseOnEsc": false,
  "disableFocusTrap": false,
  "disableOverlay": false,
  "disableOverlayClose": false,
  "disableScrolling": false,
  "dismissAction": "close",
  "event": "click",
  "floatingOptions": {
    "beaconOptions": {
      "offset": -18,
    },
  },
  "hideBackButton": false,
  "hideCloseButton": false,
  "hideFooter": false,
  "hidePrimaryButton": false,
  "isFixed": false,
  "loaderDelay": 300,
  "locale": {
    "back": "Back",
    "close": "Close",
    "last": "Last",
    "next": "Next",
    "nextLabelWithProgress": "Next (Step {step} of {steps})",
    "open": "Open the dialog",
    "skip": "Skip",
  },
  "offset": 10,
  "placement": "bottom",
  "scrollOffset": 10,
  "showProgress": false,
  "showSkipButton": false,
  "spotlightClicks": false,
  "spotlightPadding": 5,
  "stepDelay": 0,
  "styles": {
    "arrow": {
      "alignItems": "center",
      "base": 32,
      "color": "#fff",
      "display": "inline-flex",
      "justifyContent": "center",
      "position": "absolute",
      "size": 16,
    },
    "beacon": {
      "WebkitAppearance": "none",
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": "50%",
      "color": "#555",
      "cursor": "pointer",
      "display": "inline-block",
      "fontSize": 16,
      "height": 36,
      "lineHeight": 1,
      "padding": 8,
      "position": "relative",
      "width": 36,
    },
    "beaconInner": {
      "animation": "joyride-beacon-inner 1.2s infinite ease-in-out",
      "backgroundColor": "#f04",
      "borderRadius": "50%",
      "display": "block",
      "height": "50%",
      "left": "50%",
      "opacity": 0.7,
      "position": "absolute",
      "top": "50%",
      "transform": "translate(-50%, -50%)",
      "width": "50%",
    },
    "beaconOuter": {
      "animation": "joyride-beacon-outer 1.2s infinite ease-in-out",
      "backgroundColor": "rgba(255,0,68, 0.2)",
      "border": "2px solid #f04",
      "borderRadius": "50%",
      "boxSizing": "border-box",
      "display": "block",
      "height": "100%",
      "left": 0,
      "opacity": 0.9,
      "position": "absolute",
      "top": 0,
      "transformOrigin": "center",
      "width": "100%",
    },
    "buttonBack": {
      "WebkitAppearance": "none",
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": 0,
      "color": "#f04",
      "cursor": "pointer",
      "fontSize": 16,
      "lineHeight": 1,
      "marginLeft": "auto",
      "marginRight": 5,
      "padding": 8,
    },
    "buttonClose": {
      "WebkitAppearance": "none",
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": 0,
      "color": "#333",
      "cursor": "pointer",
      "fontSize": 16,
      "height": 14,
      "lineHeight": 1,
      "padding": 15,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "width": 14,
    },
    "buttonNext": {
      "WebkitAppearance": "none",
      "backgroundColor": "#f04",
      "border": 0,
      "borderRadius": 4,
      "color": "#fff",
      "cursor": "pointer",
      "fontSize": 16,
      "lineHeight": 1,
      "padding": 8,
    },
    "buttonSkip": {
      "WebkitAppearance": "none",
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": 0,
      "color": "#333",
      "cursor": "pointer",
      "fontSize": 14,
      "lineHeight": 1,
      "padding": 8,
    },
    "floater": {
      "display": "inline-block",
      "filter": "drop-shadow(0 0 3px rgba(0, 0, 0, 0.3))",
      "maxWidth": "100%",
      "transition": "opacity 0.3s",
    },
    "options": {
      "arrowColor": "#fff",
      "arrowSpacing": 5,
      "backgroundColor": "#fff",
      "beaconSize": 36,
      "overlayColor": "rgba(0, 0, 0, 0.5)",
      "primaryColor": "#f04",
      "textColor": "#333",
      "width": 380,
      "zIndex": 100,
    },
    "overlay": {
      "backgroundColor": "rgba(0, 0, 0, 0.5)",
      "bottom": 0,
      "left": 0,
      "mixBlendMode": "hard-light",
      "overflow": "hidden",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 100,
    },
    "spotlight": {
      "backgroundColor": "gray",
      "borderRadius": 4,
      "position": "absolute",
    },
    "tooltip": {
      "backgroundColor": "#fff",
      "borderRadius": 5,
      "boxSizing": "border-box",
      "color": "#333",
      "fontSize": 16,
      "maxWidth": "100%",
      "padding": 15,
      "position": "relative",
      "width": 380,
    },
    "tooltipContainer": {
      "lineHeight": 1.4,
      "textAlign": "center",
    },
    "tooltipContent": {
      "padding": "20px 10px",
    },
    "tooltipFooter": {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "flex-end",
      "marginTop": 15,
    },
    "tooltipFooterSpacer": {
      "flex": 1,
    },
    "tooltipTitle": {
      "fontSize": 18,
      "margin": 0,
    },
  },
  "target": ".test-target",
  "targetWaitTimeout": 1000,
}
`;

exports[`step > getMergedStep > should allow stepOptions to override defaultStep 1`] = `
{
  "content": "Test content",
  "disableBeacon": false,
  "disableCloseOnEsc": false,
  "disableFocusTrap": false,
  "disableOverlay": false,
  "disableOverlayClose": false,
  "disableScrolling": false,
  "dismissAction": "close",
  "event": "click",
  "floatingOptions": {
    "beaconOptions": {
      "offset": -18,
    },
  },
  "hideBackButton": false,
  "hideCloseButton": false,
  "hideFooter": false,
  "hidePrimaryButton": false,
  "isFixed": false,
  "loaderDelay": 300,
  "locale": {
    "back": "Back",
    "close": "Close",
    "last": "Last",
    "next": "Next",
    "nextLabelWithProgress": "Next (Step {step} of {steps})",
    "open": "Open the dialog",
    "skip": "Skip",
  },
  "offset": 10,
  "placement": "bottom",
  "scrollOffset": 20,
  "showProgress": false,
  "showSkipButton": false,
  "spotlightClicks": false,
  "spotlightPadding": 10,
  "stepDelay": 0,
  "styles": {
    "arrow": {
      "alignItems": "center",
      "base": 32,
      "color": "#fff",
      "display": "inline-flex",
      "justifyContent": "center",
      "position": "absolute",
      "size": 16,
    },
    "beacon": {
      "WebkitAppearance": "none",
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": "50%",
      "color": "#555",
      "cursor": "pointer",
      "display": "inline-block",
      "fontSize": 16,
      "height": 36,
      "lineHeight": 1,
      "padding": 8,
      "position": "relative",
      "width": 36,
    },
    "beaconInner": {
      "animation": "joyride-beacon-inner 1.2s infinite ease-in-out",
      "backgroundColor": "#f04",
      "borderRadius": "50%",
      "display": "block",
      "height": "50%",
      "left": "50%",
      "opacity": 0.7,
      "position": "absolute",
      "top": "50%",
      "transform": "translate(-50%, -50%)",
      "width": "50%",
    },
    "beaconOuter": {
      "animation": "joyride-beacon-outer 1.2s infinite ease-in-out",
      "backgroundColor": "rgba(255,0,68, 0.2)",
      "border": "2px solid #f04",
      "borderRadius": "50%",
      "boxSizing": "border-box",
      "display": "block",
      "height": "100%",
      "left": 0,
      "opacity": 0.9,
      "position": "absolute",
      "top": 0,
      "transformOrigin": "center",
      "width": "100%",
    },
    "buttonBack": {
      "WebkitAppearance": "none",
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": 0,
      "color": "#f04",
      "cursor": "pointer",
      "fontSize": 16,
      "lineHeight": 1,
      "marginLeft": "auto",
      "marginRight": 5,
      "padding": 8,
    },
    "buttonClose": {
      "WebkitAppearance": "none",
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": 0,
      "color": "#333",
      "cursor": "pointer",
      "fontSize": 16,
      "height": 14,
      "lineHeight": 1,
      "padding": 15,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "width": 14,
    },
    "buttonNext": {
      "WebkitAppearance": "none",
      "backgroundColor": "#f04",
      "border": 0,
      "borderRadius": 4,
      "color": "#fff",
      "cursor": "pointer",
      "fontSize": 16,
      "lineHeight": 1,
      "padding": 8,
    },
    "buttonSkip": {
      "WebkitAppearance": "none",
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": 0,
      "color": "#333",
      "cursor": "pointer",
      "fontSize": 14,
      "lineHeight": 1,
      "padding": 8,
    },
    "floater": {
      "display": "inline-block",
      "filter": "drop-shadow(0 0 3px rgba(0, 0, 0, 0.3))",
      "maxWidth": "100%",
      "transition": "opacity 0.3s",
    },
    "options": {
      "arrowColor": "#fff",
      "arrowSpacing": 5,
      "backgroundColor": "#fff",
      "beaconSize": 36,
      "overlayColor": "rgba(0, 0, 0, 0.5)",
      "primaryColor": "#f04",
      "textColor": "#333",
      "width": 380,
      "zIndex": 100,
    },
    "overlay": {
      "backgroundColor": "rgba(0, 0, 0, 0.5)",
      "bottom": 0,
      "left": 0,
      "mixBlendMode": "hard-light",
      "overflow": "hidden",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 100,
    },
    "spotlight": {
      "backgroundColor": "gray",
      "borderRadius": 4,
      "position": "absolute",
    },
    "tooltip": {
      "backgroundColor": "#fff",
      "borderRadius": 5,
      "boxSizing": "border-box",
      "color": "#333",
      "fontSize": 16,
      "maxWidth": "100%",
      "padding": 15,
      "position": "relative",
      "width": 380,
    },
    "tooltipContainer": {
      "lineHeight": 1.4,
      "textAlign": "center",
    },
    "tooltipContent": {
      "padding": "20px 10px",
    },
    "tooltipFooter": {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "flex-end",
      "marginTop": 15,
    },
    "tooltipFooterSpacer": {
      "flex": 1,
    },
    "tooltipTitle": {
      "fontSize": 18,
      "margin": 0,
    },
  },
  "target": ".test-target",
  "targetWaitTimeout": 1000,
}
`;

exports[`step > getMergedStep > should include styles in the merged step 1`] = `
{
  "arrow": {
    "alignItems": "center",
    "base": 32,
    "color": "#fff",
    "display": "inline-flex",
    "justifyContent": "center",
    "position": "absolute",
    "size": 16,
  },
  "beacon": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": "50%",
    "color": "#555",
    "cursor": "pointer",
    "display": "inline-block",
    "fontSize": 16,
    "height": 36,
    "lineHeight": 1,
    "padding": 8,
    "position": "relative",
    "width": 36,
  },
  "beaconInner": {
    "animation": "joyride-beacon-inner 1.2s infinite ease-in-out",
    "backgroundColor": "#f04",
    "borderRadius": "50%",
    "display": "block",
    "height": "50%",
    "left": "50%",
    "opacity": 0.7,
    "position": "absolute",
    "top": "50%",
    "transform": "translate(-50%, -50%)",
    "width": "50%",
  },
  "beaconOuter": {
    "animation": "joyride-beacon-outer 1.2s infinite ease-in-out",
    "backgroundColor": "rgba(255,0,68, 0.2)",
    "border": "2px solid #f04",
    "borderRadius": "50%",
    "boxSizing": "border-box",
    "display": "block",
    "height": "100%",
    "left": 0,
    "opacity": 0.9,
    "position": "absolute",
    "top": 0,
    "transformOrigin": "center",
    "width": "100%",
  },
  "buttonBack": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#f04",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "marginLeft": "auto",
    "marginRight": 5,
    "padding": 8,
  },
  "buttonClose": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#333",
    "cursor": "pointer",
    "fontSize": 16,
    "height": 14,
    "lineHeight": 1,
    "padding": 15,
    "position": "absolute",
    "right": 0,
    "top": 0,
    "width": 14,
  },
  "buttonNext": {
    "WebkitAppearance": "none",
    "backgroundColor": "#f04",
    "border": 0,
    "borderRadius": 4,
    "color": "#fff",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "padding": 8,
  },
  "buttonSkip": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#333",
    "cursor": "pointer",
    "fontSize": 14,
    "lineHeight": 1,
    "padding": 8,
  },
  "floater": {
    "display": "inline-block",
    "filter": "drop-shadow(0 0 3px rgba(0, 0, 0, 0.3))",
    "maxWidth": "100%",
    "transition": "opacity 0.3s",
  },
  "options": {
    "arrowColor": "#fff",
    "arrowSpacing": 5,
    "backgroundColor": "#fff",
    "beaconSize": 36,
    "overlayColor": "rgba(0, 0, 0, 0.5)",
    "primaryColor": "#f04",
    "textColor": "#333",
    "width": 380,
    "zIndex": 100,
  },
  "overlay": {
    "backgroundColor": "rgba(0, 0, 0, 0.5)",
    "bottom": 0,
    "left": 0,
    "mixBlendMode": "hard-light",
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "spotlight": {
    "backgroundColor": "gray",
    "borderRadius": 4,
    "position": "absolute",
  },
  "tooltip": {
    "backgroundColor": "#fff",
    "borderRadius": 5,
    "boxSizing": "border-box",
    "color": "#333",
    "fontSize": 16,
    "maxWidth": "100%",
    "padding": 15,
    "position": "relative",
    "width": 380,
  },
  "tooltipContainer": {
    "lineHeight": 1.4,
    "textAlign": "center",
  },
  "tooltipContent": {
    "padding": "20px 10px",
  },
  "tooltipFooter": {
    "alignItems": "center",
    "display": "flex",
    "justifyContent": "flex-end",
    "marginTop": 15,
  },
  "tooltipFooterSpacer": {
    "flex": 1,
  },
  "tooltipTitle": {
    "fontSize": 18,
    "margin": 0,
  },
}
`;

exports[`step > getMergedStep > should merge defaultStep values 1`] = `
{
  "content": "Test content",
  "disableBeacon": false,
  "disableCloseOnEsc": false,
  "disableFocusTrap": false,
  "disableOverlay": false,
  "disableOverlayClose": false,
  "disableScrolling": false,
  "dismissAction": "close",
  "event": "click",
  "floatingOptions": {
    "beaconOptions": {
      "offset": -18,
    },
  },
  "hideBackButton": false,
  "hideCloseButton": false,
  "hideFooter": false,
  "hidePrimaryButton": false,
  "isFixed": false,
  "loaderDelay": 300,
  "locale": {
    "back": "Back",
    "close": "Close",
    "last": "Last",
    "next": "Next",
    "nextLabelWithProgress": "Next (Step {step} of {steps})",
    "open": "Open the dialog",
    "skip": "Skip",
  },
  "offset": 10,
  "placement": "bottom",
  "scrollOffset": 20,
  "showProgress": false,
  "showSkipButton": false,
  "spotlightClicks": false,
  "spotlightPadding": 10,
  "stepDelay": 0,
  "styles": {
    "arrow": {
      "alignItems": "center",
      "base": 32,
      "color": "#fff",
      "display": "inline-flex",
      "justifyContent": "center",
      "position": "absolute",
      "size": 16,
    },
    "beacon": {
      "WebkitAppearance": "none",
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": "50%",
      "color": "#555",
      "cursor": "pointer",
      "display": "inline-block",
      "fontSize": 16,
      "height": 36,
      "lineHeight": 1,
      "padding": 8,
      "position": "relative",
      "width": 36,
    },
    "beaconInner": {
      "animation": "joyride-beacon-inner 1.2s infinite ease-in-out",
      "backgroundColor": "#f04",
      "borderRadius": "50%",
      "display": "block",
      "height": "50%",
      "left": "50%",
      "opacity": 0.7,
      "position": "absolute",
      "top": "50%",
      "transform": "translate(-50%, -50%)",
      "width": "50%",
    },
    "beaconOuter": {
      "animation": "joyride-beacon-outer 1.2s infinite ease-in-out",
      "backgroundColor": "rgba(255,0,68, 0.2)",
      "border": "2px solid #f04",
      "borderRadius": "50%",
      "boxSizing": "border-box",
      "display": "block",
      "height": "100%",
      "left": 0,
      "opacity": 0.9,
      "position": "absolute",
      "top": 0,
      "transformOrigin": "center",
      "width": "100%",
    },
    "buttonBack": {
      "WebkitAppearance": "none",
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": 0,
      "color": "#f04",
      "cursor": "pointer",
      "fontSize": 16,
      "lineHeight": 1,
      "marginLeft": "auto",
      "marginRight": 5,
      "padding": 8,
    },
    "buttonClose": {
      "WebkitAppearance": "none",
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": 0,
      "color": "#333",
      "cursor": "pointer",
      "fontSize": 16,
      "height": 14,
      "lineHeight": 1,
      "padding": 15,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "width": 14,
    },
    "buttonNext": {
      "WebkitAppearance": "none",
      "backgroundColor": "#f04",
      "border": 0,
      "borderRadius": 4,
      "color": "#fff",
      "cursor": "pointer",
      "fontSize": 16,
      "lineHeight": 1,
      "padding": 8,
    },
    "buttonSkip": {
      "WebkitAppearance": "none",
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": 0,
      "color": "#333",
      "cursor": "pointer",
      "fontSize": 14,
      "lineHeight": 1,
      "padding": 8,
    },
    "floater": {
      "display": "inline-block",
      "filter": "drop-shadow(0 0 3px rgba(0, 0, 0, 0.3))",
      "maxWidth": "100%",
      "transition": "opacity 0.3s",
    },
    "options": {
      "arrowColor": "#fff",
      "arrowSpacing": 5,
      "backgroundColor": "#fff",
      "beaconSize": 36,
      "overlayColor": "rgba(0, 0, 0, 0.5)",
      "primaryColor": "#f04",
      "textColor": "#333",
      "width": 380,
      "zIndex": 100,
    },
    "overlay": {
      "backgroundColor": "rgba(0, 0, 0, 0.5)",
      "bottom": 0,
      "left": 0,
      "mixBlendMode": "hard-light",
      "overflow": "hidden",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 100,
    },
    "spotlight": {
      "backgroundColor": "gray",
      "borderRadius": 4,
      "position": "absolute",
    },
    "tooltip": {
      "backgroundColor": "#fff",
      "borderRadius": 5,
      "boxSizing": "border-box",
      "color": "#333",
      "fontSize": 16,
      "maxWidth": "100%",
      "padding": 15,
      "position": "relative",
      "width": 380,
    },
    "tooltipContainer": {
      "lineHeight": 1.4,
      "textAlign": "center",
    },
    "tooltipContent": {
      "padding": "20px 10px",
    },
    "tooltipFooter": {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "flex-end",
      "marginTop": 15,
    },
    "tooltipFooterSpacer": {
      "flex": 1,
    },
    "tooltipTitle": {
      "fontSize": 18,
      "margin": 0,
    },
  },
  "target": ".test-target",
  "targetWaitTimeout": 1000,
}
`;

exports[`step > getMergedStep > should merge floatingOptions from defaults, props, and step 1`] = `
{
  "beaconOptions": {
    "offset": -10,
  },
  "strategy": "fixed",
}
`;

exports[`step > getMergedStep > should merge locale from defaults, props, and step 1`] = `
{
  "back": "Return",
  "close": "Close",
  "last": "Last",
  "next": "Continue",
  "nextLabelWithProgress": "Next (Step {step} of {steps})",
  "open": "Open the dialog",
  "skip": "Skip",
}
`;

exports[`step > getMergedStep > should merge scrollOffset from props 1`] = `
{
  "content": "Test content",
  "disableBeacon": false,
  "disableCloseOnEsc": false,
  "disableFocusTrap": false,
  "disableOverlay": false,
  "disableOverlayClose": false,
  "disableScrolling": false,
  "dismissAction": "close",
  "event": "click",
  "floatingOptions": {
    "beaconOptions": {
      "offset": -18,
    },
  },
  "hideBackButton": false,
  "hideCloseButton": false,
  "hideFooter": false,
  "hidePrimaryButton": false,
  "isFixed": false,
  "loaderDelay": 300,
  "locale": {
    "back": "Back",
    "close": "Close",
    "last": "Last",
    "next": "Next",
    "nextLabelWithProgress": "Next (Step {step} of {steps})",
    "open": "Open the dialog",
    "skip": "Skip",
  },
  "offset": 10,
  "placement": "bottom",
  "scrollOffset": 20,
  "showProgress": false,
  "showSkipButton": false,
  "spotlightClicks": false,
  "spotlightPadding": 10,
  "stepDelay": 0,
  "styles": {
    "arrow": {
      "alignItems": "center",
      "base": 32,
      "color": "#fff",
      "display": "inline-flex",
      "justifyContent": "center",
      "position": "absolute",
      "size": 16,
    },
    "beacon": {
      "WebkitAppearance": "none",
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": "50%",
      "color": "#555",
      "cursor": "pointer",
      "display": "inline-block",
      "fontSize": 16,
      "height": 36,
      "lineHeight": 1,
      "padding": 8,
      "position": "relative",
      "width": 36,
    },
    "beaconInner": {
      "animation": "joyride-beacon-inner 1.2s infinite ease-in-out",
      "backgroundColor": "#f04",
      "borderRadius": "50%",
      "display": "block",
      "height": "50%",
      "left": "50%",
      "opacity": 0.7,
      "position": "absolute",
      "top": "50%",
      "transform": "translate(-50%, -50%)",
      "width": "50%",
    },
    "beaconOuter": {
      "animation": "joyride-beacon-outer 1.2s infinite ease-in-out",
      "backgroundColor": "rgba(255,0,68, 0.2)",
      "border": "2px solid #f04",
      "borderRadius": "50%",
      "boxSizing": "border-box",
      "display": "block",
      "height": "100%",
      "left": 0,
      "opacity": 0.9,
      "position": "absolute",
      "top": 0,
      "transformOrigin": "center",
      "width": "100%",
    },
    "buttonBack": {
      "WebkitAppearance": "none",
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": 0,
      "color": "#f04",
      "cursor": "pointer",
      "fontSize": 16,
      "lineHeight": 1,
      "marginLeft": "auto",
      "marginRight": 5,
      "padding": 8,
    },
    "buttonClose": {
      "WebkitAppearance": "none",
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": 0,
      "color": "#333",
      "cursor": "pointer",
      "fontSize": 16,
      "height": 14,
      "lineHeight": 1,
      "padding": 15,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "width": 14,
    },
    "buttonNext": {
      "WebkitAppearance": "none",
      "backgroundColor": "#f04",
      "border": 0,
      "borderRadius": 4,
      "color": "#fff",
      "cursor": "pointer",
      "fontSize": 16,
      "lineHeight": 1,
      "padding": 8,
    },
    "buttonSkip": {
      "WebkitAppearance": "none",
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": 0,
      "color": "#333",
      "cursor": "pointer",
      "fontSize": 14,
      "lineHeight": 1,
      "padding": 8,
    },
    "floater": {
      "display": "inline-block",
      "filter": "drop-shadow(0 0 3px rgba(0, 0, 0, 0.3))",
      "maxWidth": "100%",
      "transition": "opacity 0.3s",
    },
    "options": {
      "arrowColor": "#fff",
      "arrowSpacing": 5,
      "backgroundColor": "#fff",
      "beaconSize": 36,
      "overlayColor": "rgba(0, 0, 0, 0.5)",
      "primaryColor": "#f04",
      "textColor": "#333",
      "width": 380,
      "zIndex": 100,
    },
    "overlay": {
      "backgroundColor": "rgba(0, 0, 0, 0.5)",
      "bottom": 0,
      "left": 0,
      "mixBlendMode": "hard-light",
      "overflow": "hidden",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 100,
    },
    "spotlight": {
      "backgroundColor": "gray",
      "borderRadius": 4,
      "position": "absolute",
    },
    "tooltip": {
      "backgroundColor": "#fff",
      "borderRadius": 5,
      "boxSizing": "border-box",
      "color": "#333",
      "fontSize": 16,
      "maxWidth": "100%",
      "padding": 15,
      "position": "relative",
      "width": 380,
    },
    "tooltipContainer": {
      "lineHeight": 1.4,
      "textAlign": "center",
    },
    "tooltipContent": {
      "padding": "20px 10px",
    },
    "tooltipFooter": {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "flex-end",
      "marginTop": 15,
    },
    "tooltipFooterSpacer": {
      "flex": 1,
    },
    "tooltipTitle": {
      "fontSize": 18,
      "margin": 0,
    },
  },
  "target": ".test-target",
  "targetWaitTimeout": 1000,
}
`;

exports[`step > getMergedStep > should preserve unset stepOptions defaults when partial stepOptions is provided 1`] = `
{
  "content": "Test content",
  "disableBeacon": false,
  "disableCloseOnEsc": false,
  "disableFocusTrap": false,
  "disableOverlay": false,
  "disableOverlayClose": false,
  "disableScrolling": false,
  "dismissAction": "close",
  "event": "click",
  "floatingOptions": {
    "beaconOptions": {
      "offset": -18,
    },
  },
  "hideBackButton": false,
  "hideCloseButton": false,
  "hideFooter": false,
  "hidePrimaryButton": false,
  "isFixed": false,
  "loaderDelay": 300,
  "locale": {
    "back": "Back",
    "close": "Close",
    "last": "Last",
    "next": "Next",
    "nextLabelWithProgress": "Next (Step {step} of {steps})",
    "open": "Open the dialog",
    "skip": "Skip",
  },
  "offset": 10,
  "placement": "bottom",
  "scrollOffset": 20,
  "showProgress": false,
  "showSkipButton": false,
  "spotlightClicks": false,
  "spotlightPadding": 10,
  "stepDelay": 0,
  "styles": {
    "arrow": {
      "alignItems": "center",
      "base": 32,
      "color": "#fff",
      "display": "inline-flex",
      "justifyContent": "center",
      "position": "absolute",
      "size": 16,
    },
    "beacon": {
      "WebkitAppearance": "none",
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": "50%",
      "color": "#555",
      "cursor": "pointer",
      "display": "inline-block",
      "fontSize": 16,
      "height": 36,
      "lineHeight": 1,
      "padding": 8,
      "position": "relative",
      "width": 36,
    },
    "beaconInner": {
      "animation": "joyride-beacon-inner 1.2s infinite ease-in-out",
      "backgroundColor": "#f04",
      "borderRadius": "50%",
      "display": "block",
      "height": "50%",
      "left": "50%",
      "opacity": 0.7,
      "position": "absolute",
      "top": "50%",
      "transform": "translate(-50%, -50%)",
      "width": "50%",
    },
    "beaconOuter": {
      "animation": "joyride-beacon-outer 1.2s infinite ease-in-out",
      "backgroundColor": "rgba(255,0,68, 0.2)",
      "border": "2px solid #f04",
      "borderRadius": "50%",
      "boxSizing": "border-box",
      "display": "block",
      "height": "100%",
      "left": 0,
      "opacity": 0.9,
      "position": "absolute",
      "top": 0,
      "transformOrigin": "center",
      "width": "100%",
    },
    "buttonBack": {
      "WebkitAppearance": "none",
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": 0,
      "color": "#f04",
      "cursor": "pointer",
      "fontSize": 16,
      "lineHeight": 1,
      "marginLeft": "auto",
      "marginRight": 5,
      "padding": 8,
    },
    "buttonClose": {
      "WebkitAppearance": "none",
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": 0,
      "color": "#333",
      "cursor": "pointer",
      "fontSize": 16,
      "height": 14,
      "lineHeight": 1,
      "padding": 15,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "width": 14,
    },
    "buttonNext": {
      "WebkitAppearance": "none",
      "backgroundColor": "#f04",
      "border": 0,
      "borderRadius": 4,
      "color": "#fff",
      "cursor": "pointer",
      "fontSize": 16,
      "lineHeight": 1,
      "padding": 8,
    },
    "buttonSkip": {
      "WebkitAppearance": "none",
      "backgroundColor": "transparent",
      "border": 0,
      "borderRadius": 0,
      "color": "#333",
      "cursor": "pointer",
      "fontSize": 14,
      "lineHeight": 1,
      "padding": 8,
    },
    "floater": {
      "display": "inline-block",
      "filter": "drop-shadow(0 0 3px rgba(0, 0, 0, 0.3))",
      "maxWidth": "100%",
      "transition": "opacity 0.3s",
    },
    "options": {
      "arrowColor": "#fff",
      "arrowSpacing": 5,
      "backgroundColor": "#fff",
      "beaconSize": 36,
      "overlayColor": "rgba(0, 0, 0, 0.5)",
      "primaryColor": "#f04",
      "textColor": "#333",
      "width": 380,
      "zIndex": 100,
    },
    "overlay": {
      "backgroundColor": "rgba(0, 0, 0, 0.5)",
      "bottom": 0,
      "left": 0,
      "mixBlendMode": "hard-light",
      "overflow": "hidden",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 100,
    },
    "spotlight": {
      "backgroundColor": "gray",
      "borderRadius": 4,
      "position": "absolute",
    },
    "tooltip": {
      "backgroundColor": "#fff",
      "borderRadius": 5,
      "boxSizing": "border-box",
      "color": "#333",
      "fontSize": 16,
      "maxWidth": "100%",
      "padding": 15,
      "position": "relative",
      "width": 380,
    },
    "tooltipContainer": {
      "lineHeight": 1.4,
      "textAlign": "center",
    },
    "tooltipContent": {
      "padding": "20px 10px",
    },
    "tooltipFooter": {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "flex-end",
      "marginTop": 15,
    },
    "tooltipFooterSpacer": {
      "flex": 1,
    },
    "tooltipTitle": {
      "fontSize": 18,
      "margin": 0,
    },
  },
  "target": ".test-target",
  "targetWaitTimeout": 1000,
}
`;
